Wed Dec 16 16:57:55 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkevents.c (gdk_events_queue): Don't
	call XPending() if we have putback events.

Wed Dec 16 16:04:41 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_expose): Do nothing
	on empty string, quietly.

Wed Dec 16 15:36:19 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_draw_cursor_on_drawable):
	Redraw the character under the cursor when removing
	the cursor.

Wed Dec 16 13:06:17 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.[ch] gtk/gtkmain.[ch] gtk/gtkprivate.h: Move main
	thread lock back to GDK - we need it there for locking
	when translating events. Rename things appropriately.

Wed Dec 16 11:44:21 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c (gtk_range_expose): Fix a x/y typo.

Wed Dec 16 10:20:27 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.8

	* ChangeLog:
	  INSTALL:
	  README:
	  gtk+.spec:
	  docs/gtk-config.1: version=1.1.8

1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gdk/gdkglobals.c: Define gdk_xim_ic only, if USE_XIM is defined.

Wed Dec 16 07:03:32 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.h: 
	* gtk/gtkwidget.c: s/USER_DRAW/APP_PAINTABLE/. provided
	gtk_widget_set_app_paintable() which users can use to make
	a widget paintable for the application. changed other files accordingly.

Wed Dec 16 05:26:32 1998  Tim Janik  <timj@gtk.org>

        * configure.in: version bump to 1.1.8, binary age 0, interface age 0,
	depend on GLib 1.1.8.

	* gdk/gdkprivate.h:
	* gdk/gdkglobals.c: removed last Gdk threads specific bits.

	* gtk/gtkmain.c (gtk_init): s/g_thread_supported/g_thread_supported()/.

	* gtk/gtkprivate.h: changed GTK_THREADS_ENTER and GTK_THREADS_LEAVE
	to function macros GTK_THREADS_ENTER() and GTK_THREADS_LEAVE().
	honour G_THREADS_ENABLED in the definition of GTK_THREADS_ENTER()
 	and GTK_THREADS_LEAVE(). changed callers accordingly.
